Причесал код, добавил хотя бы какое-то логирование