@@ -1,29 +1,33 @@
-package edu.java.bot.database;
+package edu.java.bot.memory;
 
 import com.pengrad.telegrambot.model.Update;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.HashSet;
 import org.springframework.stereotype.Repository;
 import static edu.java.bot.utility.ErrorLogger.createLogError;
+import static edu.java.bot.utility.UtilityStatusClass.ENDL_CHAR;
+import static edu.java.bot.utility.UtilityStatusClass.NO_LINKS_NOT_TRACKED;
 
 @Repository
 public class DataManager {
-    private static final HashMap<Long, HashSet<URL>> trackCashedMap = new HashMap<>();
+    private static final HashMap<Long, HashSet<URI>> trackCashedMap = new HashMap<>();
 
     static boolean addURl(Update update) {
         Long id = update.message().chat().id();
         String url = update.message().text();
-        HashSet<URL> urls = trackCashedMap.computeIfAbsent(id, k -> new HashSet<>());
+        HashSet<URI> urls = trackCashedMap.computeIfAbsent(id, k -> new HashSet<>());
 
         try {
-            URL newUrl = new URL(url);
+            URI newUrl = new URI(url);
 
             urls.add(newUrl);
             trackCashedMap.put(id, urls);
             return true;
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException e) {
             createLogError(e.getMessage());
             return false;
         }
@@ -32,11 +36,11 @@ public class DataManager {
     static boolean deleteURl(Update update) {
         Long id = update.message().chat().id();
         String url = update.message().text();
-        HashSet<URL> urls = trackCashedMap.get(id);
+        HashSet<URI> urls = trackCashedMap.get(id);
         boolean result = false;
 
         try {
-            URL urlToRemove = new URL(url);
+            URI urlToRemove = new URI(url);
 
             if (urls.remove(urlToRemove)) {
                 if (urls.isEmpty()) {
@@ -46,22 +50,21 @@ public class DataManager {
                 }
                 result = true;
             }
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException e) {
             createLogError(e.getMessage());
-            result = false;
         }
         return result;
     }
 
     static String getListOFTrackedCommands(Long id) {
-        String result = "Никаких ссылок не отслеживается";
+        String result = NO_LINKS_NOT_TRACKED;
 
         if (trackCashedMap.containsKey(id)) {
 
-            HashSet<URL> urls = trackCashedMap.get(id);
+            HashSet<URI> urls = trackCashedMap.get(id);
             StringBuilder sb = new StringBuilder();
-            for (URL url : urls) {
-                sb.append(url.toString()).append('\n');
+            for (URI url : urls) {
+                sb.append(url.toString()).append(ENDL_CHAR);
             }
             result = sb.toString();
         }
